updated test results for notebook: reached 12M messages per second of throughput for single Akka actor with alternative UnboundedMailbox