@@ -121,6 +121,7 @@
                     <configuration>
                         <runOrder>alphabetical</runOrder>
                         <forkMode>always</forkMode>
+                        <!-- -XX:+PrintGCDetails -->
                         <argLine>-server -Xms4g -Xmx4g -Xss1m -XX:NewSize=3g -XX:+TieredCompilation -XX:+UseParNewGC -XX:+UseNUMA</argLine>
                     </configuration>
                 </plugin>
